# SDCs

./: CMakeLists.txt  README.md  benchmark.sh
data/: boolean_filter_fare_amount  boolean_filter_tip_amount  metadata.json  primary_index.json
data/NYCTaxi/: boolean_filter_VendorID  boolean_filter_VendorID<=1  boolean_filter_fare_amount<5  boolean_filter_fare_amount>20  boolean_filter_tip_amount  boolean_filter_tip_amount<2  boolean_filter_tip_amount>10  cp_index.json  primary_index.json  qd_index.json
data/NYCTaxi/column_partition/: data_block_0.parquet  data_block_2.parquet
data/NYCTaxi/qdTree/: data_block_1.parquet  data_block_10.parquet  data_block_11.parquet  data_block_12.parquet  data_block_13.parquet  data_block_14.parquet  data_block_4.parquet  data_block_5.parquet  data_block_6.parquet  data_block_7.parquet  data_block_8.parquet  data_block_9.parquet
data/NYCTaxi/qd_index/: data_block_0  data_block_0.parquet  data_block_1  data_block_1.parquet  data_block_2.parquet  data_block_3.parquet  data_block_4.parquet
include/: col_partition.h  filter.h  qd_tree.h  sdc.h  types.h
src/: col_partition.cc  main.cc  qd_tree.cc  sdc.cc  types.cc
